# DeliGran

./: .gitignore  README-EN.md  README-Firts.md  README.md  doxyfile
bins/macOS/debug/: libDeliGranRest.dylib  libDeliGranUtils.dylib
config/: DeliGranRestConfig-official.yaml
doc/: README.md
docs/doxygen/html/: a00026_source.html  a00029_source.html  a00032_source.html  a00035_source.html  a00038_source.html  a00041_source.html  a00044_source.html  a00047_source.html  a00050_source.html  a00053_source.html  a00056_source.html  a00059.html  a00059.js  a00059_source.html  a00062_source.html  a00068.html  a00071.html  a00072.html  a00075.html  a00076.html  a00079.html  a00080.html  a00083.html  a00084.html  a00087.html  a00088.html  a00091.html  a00092.html  a00095.html  a00096.html  a00099.html  a00100.html  a00103.html  a00104.html  a00107.html  a00108.html  a00111.html  a00112.html  a00115.html  a00116.html  (+80 more)
docs/doxygen/latex/: a00026_source.tex  a00029_source.tex  a00059.tex  (+47 more)
examples/: OpenAPI.json  OpenAPI.yaml  swagger.json
examples/DeliGranWS/: CMakeLists.txt
examples/DeliGranWS/src/: DeliGranWS.c
examples/DeliGranWS/src/controllers/: EmpresasController.c
examples/DeliGranWS/src/controllers/include/: EmpresasController.h
examples/TestDGR/: CMakeLists.txt
examples/TestDGR/config/: config.yaml
examples/TestDGR/include/: TestDGR.h
examples/TestDGR/src/: TestDGR.c
examples/TestDGR/src/controllers/: DefaultController.c
examples/TestDGR/src/controllers/include/: DefaultController.h
examples/TestDGR/src/entities/include/: Enterprise.h  User.h
(+52 files in other folders)
